--- a/MReg1.html
+++ b/MReg1.html
@@ -2795,7 +2795,7 @@ P.math {
 <div id="begrüßung-und-themenüberblick" class="section level1" number="1">
 <h1><span class="header-section-number">1</span> Begrüßung und
 Themenüberblick</h1>
-<p>Hallo und herzlich Willkommen zu dieser Videoserie zum Thema
+<p>Hallo und herzlich willkommen zu dieser Videoserie zum Thema
 Mehrebenenregression in R. Damit Sie den Inhalten folgen können, sollten
 Sie Vorkenntnisse zur linearen OLS Regression haben, sowie Grundlagen in
 R beherrschen. Ideal wäre es, wenn Sie auch schon einen Lehrbuchtext zur
@@ -2804,7 +2804,7 @@ finden Sie am Ende des Videos.</p>
 <p>Diese Videoserie besteht aus sechs aufeinander aufbauenden
 Teilen:</p>
 <ul>
-<li>Teil 1: Was ist eine Mehrebenenregression?</li>
+<li>Teil 1: Was ist eine Mehrebenenregression? (Dieses Script)</li>
 <li>Teil 2: <a href="MReg2.html">Wann ist eine Mehrebenenregression
 angebracht?</a></li>
 <li>Teil 3: <a href="Mreg3.html">Wie werden die Daten für eine
